After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740789 - \e[K misbehavior at right margin
\e[K misbehavior at right margin
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.39.x
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-26 22:20 UTC by Egmont Koblinger
Modified: 2018-09-11 10:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (879 bytes, patch)
2014-11-26 22:29 UTC, Egmont Koblinger
committed Details | Review

Description Egmont Koblinger 2014-11-26 22:20:41 UTC
https://bugzilla.redhat.com/show_bug.cgi?id=1168182 <- see here for technical details

\e[K is emitted by grep at every color change as a workaround against the full line having a weird background color. This, however, when emitted when the line is already full, causes the last character to be dropped, causing incorrect data to be displayed to the user.

I believe here we should deviate from xterm's behavior (it does the same as we do now) and follow what konsole does.
Comment 1 Egmont Koblinger 2014-11-26 22:29:45 UTC
Created attachment 291604 [details] [review]
Fix
Comment 2 Egmont Koblinger 2014-11-26 22:36:51 UTC
Note: seems to me that there's no test case for this in vttest. We still pass vttest's 1, 2 and 8.
Comment 3 Egmont Koblinger 2014-12-01 12:32:23 UTC
Fixed.
Comment 4 Egmont Koblinger 2015-10-09 10:18:18 UTC
Just for reference:

iTerm2 (latest nightly snapshot) behaves as we do now (the one that makes most sense in my opinion).

Terminal.app (Yosemite) chops off the last character on a \e[K, yet prints the next one in the next row instead of there, leaving a gap (that's not even copy-pasted) at the end of the line. Approximately just as stupid as what xterm does :)
Comment 5 Egmont Koblinger 2018-09-11 10:07:02 UTC
Continued at https://gitlab.gnome.org/GNOME/vte/issues/43.