emulation: Modify erase-in-line when cursor is beyond the last column

Don't move the cursor back to the last column. This intentially deviates
from xterm because makes more sense and fixes utilities such as grep.

https://bugzilla.gnome.org/show_bug.cgi?id=740789